# prism

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  default.nix
.github/workflows/: ci.yml  release.yml  tag-version.yml
docs/: cli.md  examples.md  performance.md  release.md  status.md  testing.md
scripts/: perf_matrix.py  release_smoke.py
src/: main.rs
tests/: cli.rs  docs_contract.rs  docs_examples.rs
